adding some capitol letters to the section headers

--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -53,7 +53,7 @@ it does produce a single number.
 
 This info comes from \cite{parmenter2010}.
 
-\subsection{Possible data points for Level of Effort}
+\subsection{POSSIBLE DATA POINTS FOR LEVEL OF EFFORT}
 
 \begin{description}
     \item[Actual Development Hours] Actual Hours Spent on development
