--- a/paper_50_sdlc-ae.tex
+++ b/paper_50_sdlc-ae.tex
@@ -31,7 +31,7 @@ at gamification of the SDLC focus only on the development phase \cite{Dubois2013
     score needs to be recalculated.
 
 
-    \subsection{Estimation}
+    \subsection{ESTIMATION}
     
     \begin{itemize}
     \item Change to Database Structure  
@@ -54,7 +54,7 @@ at gamification of the SDLC focus only on the development phase \cite{Dubois2013
     Estimated Test Hours - The number of testing hours estimated for a project
     Estimated Deployment Hours - The number of estimated hours required to deploy the project
     
-    \subsection{Requirements}
+    \subsection{REQUIREMENTS}
     List of: 
     \begin{description}
       \item[Title] 
@@ -70,7 +70,7 @@ at gamification of the SDLC focus only on the development phase \cite{Dubois2013
       \end{description}
     \end{description}
     
-    \subsection{Maintenance (Defects)}
+    \subsection{MAINTENANCE (DEFECTS)}
     List of:
     \begin{description}
       \item[Project] 
@@ -88,7 +88,7 @@ at gamification of the SDLC focus only on the development phase \cite{Dubois2013
     
     
     
-    \subsection{Testing}
+    \subsection{TESTING}
     
     List of:
     \begin{description}
@@ -108,7 +108,7 @@ at gamification of the SDLC focus only on the development phase \cite{Dubois2013
       \end{description}
     \end{description}
     
-    \subsection{Development}
+    \subsection{DEVELOPMENT}
     
     List of Coding Tasks:
     \begin{description}
@@ -123,7 +123,7 @@ at gamification of the SDLC focus only on the development phase \cite{Dubois2013
       \item[Others] See \cite{Jones2009, Jones2012, Rubin2007, Snipes2013}
     \end{description}
     
-    \subsection{Implementation}
+    \subsection{IMPLEMENTATION}
     
     List of:
     \begin{description}
