--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -185,6 +185,7 @@ for scoring the entire software development organization.
 Quality is tested in \cite{Miguel2014}
 
 \subsubsection{SOFTWARE ANALYTICS}
+What is software analytics?
 See also \cite{Buse2010}.  There is a subsection named
 software development analytics \cite{Menzies2012}.
 
