continuing work on lit review

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -137,23 +137,8 @@ or scoring the progression through the maturity levels.
 An indicator is still needed to quantify the overall performance of an organization, not
 just the compliance to standard processes.  
 
-\subsection{COCOMO}
-    Constructive Cost Model (COCOMO) is a software cost estimation model created
-    by Boehm \cite{Boehm1981}.  It combines future project characteristics
-    with historical project data to create a regression model to estimate the 
-    cost of a software project.  The original version developed in 1981 was
-    focused on mainframe and batch processing.  An unpdated version, named
-    COCOMO II, was created by Boehm in 1995 to be more flexible for newer 
-    development practices such as desktop development, off the shelf components,
-    and code reuse.  COCOMO provides a nice algorithm for making decisions
-    regarding building or buying software products.  It does not provide 
-    an algorithms to review past performance of estimates and modify the
-    algorithm accordingly.  COCOMO II can be a useful tool for an SDO,
-    but it only provides an estimate and not an evaluation of the actual
-    performance.
 
-
-\subsection{PREVIOUS SOFTWARE SCORING ATTEMPTS }
+\subsection{PREVIOUS SOFTWARE EVALUATION ATTEMPTS }
 
 Sextant is a visualization tool for Java source code \cite{Winter2013}.  Sextant provides a graphical representation of the information related 
 to a software system.  The tool provides the capability to provide custom rules which are specific to the domain or application.  However,
@@ -186,8 +171,31 @@ Quality is tested in \cite{Miguel2014}
 
 \subsubsection{SOFTWARE ANALYTICS}
 What is software analytics?
-See also \cite{Buse2010}.  There is a subsection named
-software development analytics \cite{Menzies2012}.
+See also \cite{Buse2010}.  
+
+\textit{Software Development Analytics} is a subfield of software analytics 
+\cite{Menzies2012}.  It focuses on the analytics of the development of software, not
+the overall performance of the software.  
+
+\cite{Marcus2010}
+
+
+\subsubsection{COCOMO}  
+    Constructive Cost Model (COCOMO) is a software cost estimation model created
+    by Boehm \cite{Boehm1981}.  It combines future project characteristics
+    with historical project data to create a regression model to estimate the 
+    cost of a software project.  The original version developed in 1981 was
+    focused on mainframe and batch processing.  An unpdated version, named
+    COCOMO II, was created by Boehm in 1995 to be more flexible for newer 
+    development practices such as desktop development, off the shelf components,
+    and code reuse.  COCOMO provides a nice algorithm for making decisions
+    regarding building or buying software products.  It does not provide 
+    an algorithms to review past performance of estimates and modify the
+    algorithm accordingly.  COCOMO II can be a useful tool for an SDO,
+    but it only provides an estimate and not an evaluation of the actual
+    performance.
+
+
 
 \subsubsection{SEMAT}
 
