--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -135,6 +135,12 @@ This is the definition used for the remainder of this work.
         are very popular in many of today's software development
         organizations because the models work well for dynamic
         quickly changing applications such as web-based applications.
+        Startups have largely adopted the Lean methodology for its
+        ability to identify a minimum viable product\footnote{
+        A \textit{minimum viable product} is a reduced version of software
+        that contains only the bare minimum functionality required to meet
+        the requirements.}
+        and reduce the time to market \cite{Giardino2014}. 
         
         
     \subsubsection{SDLC COMMONALITIES}
