--- a/references.bib
+++ b/references.bib
@@ -114,7 +114,7 @@
     location = {Santa Fe, New Mexico, USA},
     pages = {77--80},
     numpages = {4},
-    url = {http://doi.acm.org/10.1145/1882362.1882379},
+    url = {http://research.microsoft.com/pubs/136301/MSR-TR-2010-111.pdf},
     doi = {10.1145/1882362.1882379},
     acmid = {1882379},
     publisher = {ACM},
@@ -169,6 +169,19 @@
     address =	"Boston",
     publisher =	"Addison Wesley",
     year =		"1999"
+}
+@ARTICLE{Giardino2014,
+    author={Giardino, C. and Unterkalmsteiner, M. and Paternoster, N. and Gorschek, T. and Abrahamsson, P.},
+    journal={Software, IEEE},
+    title={What Do We Know about Software Development in Startups?},
+    year={2014},
+    month={Sept},
+    volume={31},
+    number={5},
+    pages={28-32},
+    keywords={software development management;Dropbox;Facebook;Linkedin;Spotify;Supercell;WhatsApp;software development startup practices;Commercialization;Companies;Market research;Software development;Software engineering;software development;software engineering;startups;systematic mapping study},
+    doi={10.1109/MS.2014.129},
+    ISSN={0740-7459}
 }
 @misc{Godfrey,
     author = {Sally Godfrey},
@@ -305,6 +318,24 @@
     numpages = {6},
     keywords = {SDLC, spiral, waterfall},
 } 
+@inproceedings{Marcus2010,
+    author = {Marcus, Andrian and Menzies, Timothy},
+    title = {Software is Data Too},
+    booktitle = {Proceedings of the FSE/SDP Workshop on Future of Software Engineering Research},
+    series = {FoSER '10},
+    year = {2010},
+    isbn = {978-1-4503-0427-6},
+    location = {Santa Fe, New Mexico, USA},
+    pages = {229--232},
+    numpages = {4},
+    url = {http://doi.acm.org/10.1145/1882362.1882410},
+    doi = {10.1145/1882362.1882410},
+    acmid = {1882410},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {data mining, empirical research, information retrieval, machine learning, software engineering, statistical analysis},
+} 
+
 @ARTICLE{McCabe1976, 
     author={McCabe, T.J.}, 
     journal={IEEE Transactions on Software Engineering}, 
