adding more papers

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -171,11 +171,21 @@ Quality is tested in \cite{Miguel2014}
 
 \subsubsection{SOFTWARE ANALYTICS}
 What is software analytics?
-See also \cite{Buse2010}.  
+
+Some of the measurements focus specifically on the source code; analyzing the 
+complexity, size, and coupling \cite{Tosi2012}. 
+
+Letier and Fitzgerald discuss how to choose the correct tools and techniques to analyze
+software data \cite{Letier2013}.  A goal model is produced that matches the data analysis methods
+with the goals of the software stakeholders.  Again, the method does not focus
+on analysis of development of software.
 
 \textit{Software Development Analytics} is a subfield of software analytics 
 \cite{Menzies2012}.  It focuses on the analytics of the development of software, not
 the overall performance of the software.  
+
+
+See also \cite{Buse2010}.  
 
 \cite{Marcus2010}
 
