--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -23,7 +23,7 @@ presented.  The 4 different types of indicators are:
 
 More information on the indicators can be found
 in chapter 1 of \cite{parmenter2010}
-as well as \cite{florac1999,kaplan1992,letier2013}.
+as well as \cite{florac1999,kaplan1992}.
 
 \subsection{RESULT INDICATORS FOR SDOs}
     This section will cover the potential result indicators for an SDO.
