--- a/references.bib
+++ b/references.bib
@@ -287,6 +287,25 @@
 	journal =	"Harvard Business Review",
 	pages =		"71-80"
 }
+@inproceedings{Tosi2012,
+    author = {Tosi, Davide and Lavazza, Luigi and Morasca, Sandro and Taibi, Davide},
+    title = {On the Definition of Dynamic Software Measures},
+    booktitle = {Proceedings of the ACM-IEEE International Symposium on Empirical Software Engineering and Measurement},
+    series = {ESEM '12},
+    year = {2012},
+    isbn = {978-1-4503-1056-7},
+    location = {Lund, Sweden},
+    pages = {39--48},
+    numpages = {10},
+    url = {http://doi.acm.org/10.1145/2372251.2372259},
+    doi = {10.1145/2372251.2372259},
+    acmid = {2372259},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {code coverage, dynamic coupling, dynamic measures, dynamic size},
+} 
+
+
 @book{Lee2003,
     author = {Lee, Jonathan},
     title = {Software Engineering with Computational Intelligence},
