added PROMISE Data repo

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -184,10 +184,14 @@ on analysis of development of software.
 \cite{Menzies2012}.  It focuses on the analytics of the development of software, not
 the overall performance of the software.  
 
+Software development produces many value pieces of datum that can be analyzed
+\cite{Marcus2010}. Just a few of the pieces of datum are:
+email communication, bugs, fixes, source code, version control system histories,
+process information, and test data.  Examples of this type of data
+can be found in the PROMISE Data Repository \cite{promise12}.
 
 See also \cite{Buse2010}.  
 
-\cite{Marcus2010}
 
 
 \subsubsection{COCOMO}  
