--- a/references.bib
+++ b/references.bib
@@ -287,25 +287,6 @@
 	journal =	"Harvard Business Review",
 	pages =		"71-80"
 }
-@inproceedings{Tosi2012,
-    author = {Tosi, Davide and Lavazza, Luigi and Morasca, Sandro and Taibi, Davide},
-    title = {On the Definition of Dynamic Software Measures},
-    booktitle = {Proceedings of the ACM-IEEE International Symposium on Empirical Software Engineering and Measurement},
-    series = {ESEM '12},
-    year = {2012},
-    isbn = {978-1-4503-1056-7},
-    location = {Lund, Sweden},
-    pages = {39--48},
-    numpages = {10},
-    url = {http://doi.acm.org/10.1145/2372251.2372259},
-    doi = {10.1145/2372251.2372259},
-    acmid = {2372259},
-    publisher = {ACM},
-    address = {New York, NY, USA},
-    keywords = {code coverage, dynamic coupling, dynamic measures, dynamic size},
-} 
-
-
 @book{Lee2003,
     author = {Lee, Jonathan},
     title = {Software Engineering with Computational Intelligence},
@@ -413,6 +394,20 @@
 	publisher =	"John Wiley and Sons, Inc.",
 	year =		"2010"
 }
+@ONLINE{promise12,
+     title  = "The PROMISE Repository of empirical software engineering data",
+     month  = "June",
+     year   = "2012",
+     url    = "http://promisedata.googlecode.com",
+     author = "Tim Menzies and 
+               Bora Caglayan and 
+               Zhimin He and 
+               Ekrem Kocaguneli and 
+               Joe Krall and 
+               Fayola Peters and 
+               Burak Turhan
+              "
+ }
 @book{Putnam2013,
 	author =	"Lawrence H. Putnam and Ware Myers",
 	title =		"Five Core Metrics: the Intelligence Behind Successful Software Management",
@@ -486,6 +481,23 @@
     school={North Carolina State University},
     url={http://repository.lib.ncsu.edu/ir/handle/1840.16/9199}
 }
+@inproceedings{Tosi2012,
+    author = {Tosi, Davide and Lavazza, Luigi and Morasca, Sandro and Taibi, Davide},
+    title = {On the Definition of Dynamic Software Measures},
+    booktitle = {Proceedings of the ACM-IEEE International Symposium on Empirical Software Engineering and Measurement},
+    series = {ESEM '12},
+    year = {2012},
+    isbn = {978-1-4503-1056-7},
+    location = {Lund, Sweden},
+    pages = {39--48},
+    numpages = {10},
+    url = {http://doi.acm.org/10.1145/2372251.2372259},
+    doi = {10.1145/2372251.2372259},
+    acmid = {2372259},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {code coverage, dynamic coupling, dynamic measures, dynamic size},
+} 
 @book{Tsui2013,
     title={Essentials of software engineering},
     author={Tsui, Frank F},
