adding some more papers

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -167,10 +167,31 @@ Little work exists
 for scoring the entire software development organization. 
 
 \subsubsection{SOFTWARE QUALITY}
-Quality is tested in \cite{Miguel2014}
+Quality is tested in \cite{Miguel2014} and a stack of other papers
 
 \subsubsection{SOFTWARE ANALYTICS}
-What is software analytics?
+One area of research that is focusing on the evaluation of software development organizations
+is \textit{software analytics}.  It is less focused o evaluation
+and more so on analysis of software data.  The goal of software analytics is to extract insights
+from software artifacts to aide practioners in making better decisions regarding software
+development \cite{Zhang2013}.  The main focus areas of software analytics are:
+\begin{description}
+    \item[User Experience] - How can the software enable the user to more easily or quickly 
+        accomplish the task at hand?
+    \item[Quality] - How can the number of problems with the software be decreased?
+    \item[Development Productivity] - How can the processes or tools be modified to increase 
+        the rate at which software is produced? 
+\end{description}
+
+Martin Shepperd in \cite{Hassan2013} identified 3 important questions that software
+analytics must address:
+\begin{enumerate}
+    \item ``How much better is my model performing than a naive strategy, such as guessing [\ldots]?''
+    \item ``How practically significant are the results?''
+    \item ``How sensitive are the results to small changes in one or more of the inputs?''
+\end{enumerate}
+These are 3 important questions that should be addressed when presenting any results in
+software analytics.
 
 Some of the measurements focus specifically on the source code; analyzing the 
 complexity, size, and coupling \cite{Tosi2012}. 
