--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -177,7 +177,7 @@ This is the definition used for the remainder of this work.
     \textit{Software Engineering} as a term dates back to the 
     1968 North Atlantic Treaty Organization (NATO) conference \cite{Tsui2013, Naur1969}. Over the 
     years many definitions have been provided.  IEEE provides a definition that encompasses many of the
-    other definitions.  IEEE defines software engineering as, 
+    other definitions.  IEEE ISO610.12 defines software engineering as, 
     ''The application of a systematic, disciplined, quantifiable approach to the development, operation, and maintenance of software''
     \cite{Ieee1990}.
     
