--- a/paper_40_mpi.tex
+++ b/paper_40_mpi.tex
@@ -378,4 +378,9 @@ are combined to provide one overall score.
     MPI =\sum\limits^n_{i=1} w_i S_i \text{ where } \sum\limits^n_{i=1} w_i = 1
 \]
 
+
+\subsection{SENSITIVITY OF MPI}
+
+For more on sensitivity analysis in statistical modeling, see \cite{Saltelli2000}.
+
 \end{document}
