--- a/references.bib
+++ b/references.bib
@@ -198,6 +198,25 @@
     publisher = {Elsevier Science Inc.},
     address = {New York, NY, USA},
 } 
+@article{Hassan2013,
+    author = {Hassan, Ahmed E. and Hindle, Abram and Runeson, Per and Shepperd, Martin and Devanbu, Prem and Kim, Sunghun},
+    title = {Roundtable: What's Next in Software Analytics},
+    journal = {IEEE Softw.},
+    issue_date = {July 2013},
+    volume = {30},
+    number = {4},
+    month = jul,
+    year = {2013},
+    issn = {0740-7459},
+    pages = {53--56},
+    numpages = {4},
+    url = {http://dx.doi.org/10.1109/MS.2013.85},
+    doi = {10.1109/MS.2013.85},
+    acmid = {2553363},
+    publisher = {IEEE Computer Society Press},
+    address = {Los Alamitos, CA, USA},
+    keywords = {Software development,Data mining,Software engineering,Analytical models,Natural language processing,Analytical models,decision support,software/program verification,statistical methods,testing and debugging,metrics,management,information search and retrieval},
+} 
 @book{Hibbs2009,
     author = {Hibbs, Curt and Jewett, Steve and Sullivan, Mike},
     title = {The Art of Lean Software Development: A Practical and Incremental Approach},
@@ -466,6 +485,18 @@
     address = {New York, NY, USA},
     keywords = {B-model, RAD, SDLC, SEN history column, Vmodel, incremental, spiral, unified, waterfall, wheel-and-spoke},
 } 
+@article{Saltelli2000,
+    author = {A. Saltelli and S. Tarantola and F. Campolongo},
+    title = {Sensitivity Analysis as an Ingredient of Modeling},
+    journal = {Statistical Software},
+    issue_date = {September 2013},
+    volume = {15},
+    number = {4},
+    year = {2000},
+    pages = {377-395},
+    numpages = {19},
+    url = {projecteuclid.org/euclid.ss/1009213004}
+} 
 @book{Sommerville2001,
     author =	"Iam Sommerville",
 	title =		"Software Engineering",
@@ -536,6 +567,27 @@
     doi={10.1109/WETSoM.2013.6619336},
     ISSN={2327-0950},
 }
+@article{Zhang2013,
+    author = {Zhang, Dongmei and Han, Shi and Dang, Yingnong and Lou, Jian-Guang and Zhang, Haidong and Xie, Tao},
+    title = {Software Analytics in Practice},
+    journal = {IEEE Softw.},
+    issue_date = {September 2013},
+    volume = {30},
+    number = {5},
+    month = sep,
+    year = {2013},
+    issn = {0740-7459},
+    pages = {30--37},
+    numpages = {8},
+    url = {http://dx.doi.org/10.1109/MS.2013.94},
+    doi = {10.1109/MS.2013.94},
+    acmid = {2553380},
+    publisher = {IEEE Computer Society Press},
+    address = {Los Alamitos, CA, USA},
+    keywords = {Algorithm design and analysis,Software systems,Data mining,Performance analysis,Debugging,Software analytics,Software engineering,software engineering,software analytics,mining software repositories,technology transfer,StackMine,data exploration,software artifacts,insightful information,actionable information},
+} 
+
+
 
  
 
