adding some data mining for software engineering data

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -171,8 +171,11 @@ Quality is tested in \cite{Miguel2014} and a stack of other papers
 
 \subsubsection{SOFTWARE ANALYTICS}
 One area of research that is focusing on the evaluation of software development organizations
-is \textit{software analytics}.  It is less focused o evaluation
-and more so on analysis of software data.  The goal of software analytics is to extract insights
+is \textit{software analytics}.  It is less focused on evaluation
+and more so on all sorts of analysis of software data.  Early forms of 
+software analytics were methods of data mining applied to software engineering data
+\cite{Xie2009,Taylor2010,Halkidi2011}.
+The goal of software analytics is to extract insights
 from software artifacts to aide practioners in making better decisions regarding software
 development \cite{Zhang2013}.  The main focus areas of software analytics are:
 \begin{description}
