--- a/references.bib
+++ b/references.bib
@@ -190,6 +190,24 @@
     month = {October},
     year = {2011}
 }
+@article{Halkidi2011,
+    author = {Halkidi, M. and Spinellis, D. and Tsatsaronis, G. and Vazirgiannis, M.},
+    title = {Data Mining in Software Engineering},
+    journal = {Intell. Data Anal.},
+    issue_date = {August 2011},
+    volume = {15},
+    number = {3},
+    month = aug,
+    year = {2011},
+    issn = {1088-467X},
+    pages = {413--441},
+    numpages = {29},
+    url = {http://dl.acm.org/citation.cfm?id=2010978.2010987},
+    acmid = {2010987},
+    publisher = {IOS Press},
+    address = {Amsterdam, The Netherlands, The Netherlands},
+    keywords = {Data mining techniques, KDD methods, mining software engineering data},
+} 
 @book{Halstead1977,
     author = {Halstead, Maurice H.},
     title = {Elements of Software Science (Operating and Programming Systems Series)},
@@ -512,6 +530,25 @@
     school={North Carolina State University},
     url={http://repository.lib.ncsu.edu/ir/handle/1840.16/9199}
 }
+@article{Taylor2010,
+    author = {Taylor, Quinn and Giraud\&\#45;Carrier, Christophe},
+    title = {Applications of Data Mining in Software Engineering},
+    journal = {Int. J. Data Anal. Tech. Strateg.},
+    issue_date = {July 2010},
+    volume = {2},
+    number = {3},
+    month = jul,
+    year = {2010},
+    issn = {1755-8050},
+    pages = {243--257},
+    numpages = {15},
+    url = {http://dx.doi.org/10.1504/IJDATS.2010.034058},
+    doi = {10.1504/IJDATS.2010.034058},
+    acmid = {1833480},
+    publisher = {Inderscience Publishers},
+    address = {Inderscience Publishers, Geneva, SWITZERLAND},
+    keywords = {applications, data mining, software engineering},
+} 
 @inproceedings{Tosi2012,
     author = {Tosi, Davide and Lavazza, Luigi and Morasca, Sandro and Taibi, Davide},
     title = {On the Definition of Dynamic Software Measures},
@@ -566,6 +603,19 @@
     keywords={Java;data visualisation;software metrics;software tools;Java source-code;Sextant;domain-specific metric;even application specific metric;metrics-related information;software development;software metrics;Color;Complexity theory;Java;Software;Software metrics;Java;Sextant;program transformation;software metrics;software visualization;source code analysis},
     doi={10.1109/WETSoM.2013.6619336},
     ISSN={2327-0950},
+}
+@article{Xie2009,
+    author = {Tao Xie and Suresh Thummalapenta and David Lo and Chao Liu},
+    title = {Data Mining for Software Engineering},
+    journal ={Computer},
+    volume = {42},
+    number = {8},
+    issn = {0018-9162},
+    year = {2009},
+    pages = {55-62},
+    doi = {http://doi.ieeecomputersociety.org/10.1109/MC.2009.256},
+    publisher = {IEEE Computer Society},
+    address = {Los Alamitos, CA, USA},
 }
 @article{Zhang2013,
     author = {Zhang, Dongmei and Han, Shi and Dang, Yingnong and Lou, Jian-Guang and Zhang, Haidong and Xie, Tao},
