updating some history of software analytics

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -170,11 +170,16 @@ for scoring the entire software development organization.
 Quality is tested in \cite{Miguel2014} and a stack of other papers
 
 \subsubsection{SOFTWARE ANALYTICS}
+The application of data mining techniques to software engineering can be traced back to the
+late 1990s \cite{Ruhe1997,Ebert1999,Goel1997}.
+
 One area of research that is focusing on the evaluation of software development organizations
 is \textit{software analytics}.  It is less focused on evaluation
 and more so on all sorts of analysis of software data.  Early forms of 
 software analytics were methods of data mining applied to software engineering data
-\cite{Xie2009,Taylor2010,Halkidi2011}.
+\cite{Kaner2004,Xie2009,Taylor2010,Halkidi2011}. The term software intelligence was 
+used \cite{Hassan2010}, but
+the term software analytics has become the common term for referring to the topic \cite{Zhang2011}.
 The goal of software analytics is to extract insights
 from software artifacts to aide practioners in making better decisions regarding software
 development \cite{Zhang2013}.  The main focus areas of software analytics are:
@@ -214,7 +219,8 @@ email communication, bugs, fixes, source code, version control system histories,
 process information, and test data.  Examples of this type of data
 can be found in the PROMISE Data Repository \cite{promise12}.
 
-See also \cite{Buse2010}.  
+See also \cite{Buse2010} and then \cite{Buse2012} begins to discuss the 
+information that is needed to properly perform software development analytics.
 
 
 
