--- a/references.bib
+++ b/references.bib
@@ -121,6 +121,21 @@
     address = {New York, NY, USA},
     keywords = {analytics, project management},
 } 
+@inproceedings{Buse2012,
+    author = {Buse, Raymond P. L. and Zimmermann, Thomas},
+    title = {Information Needs for Software Development Analytics},
+    booktitle = {Proceedings of the 34th International Conference on Software Engineering},
+    series = {ICSE '12},
+    year = {2012},
+    isbn = {978-1-4673-1067-3},
+    location = {Zurich, Switzerland},
+    pages = {987--996},
+    numpages = {10},
+    url = {http://dl.acm.org/citation.cfm?id=2337223.2337343},
+    acmid = {2337343},
+    publisher = {IEEE Press},
+    address = {Piscataway, NJ, USA},
+} 
 @unpublished{Cervone2014,
     author={Dan Cervone and Alexander D'Amour and Luke Bornn and Kirk Goldsberry},
     title={POINTWISE: Predicting Points and Valuing Decisions in Real Time with NBA Optical Tracking Data},
@@ -163,6 +178,24 @@
     address = {Los Alamitos, CA, USA},
     keywords = {budget and schedule, control, metrics, project management, software engineering, software engineering, metrics, control, project management, budget and schedule},
 }
+@article{Ebert1999,
+    author = {Ebert, Christof and Liedtke, Thomas and Baisch, Ekkehard},
+    title = {Improving Reliability of Large Software Systems},
+    journal = {Ann. Softw. Eng.},
+    issue_date = {1999},
+    volume = {8},
+    number = {1-4},
+    month = aug,
+    year = {1999},
+    issn = {1022-7091},
+    pages = {3--51},
+    numpages = {49},
+    url = {http://dx.doi.org/10.1023/A:1018971212809},
+    doi = {10.1023/A:1018971212809},
+    acmid = {590673},
+    publisher = {J. C. Baltzer AG, Science Publishers},
+    address = {Red Bank, NJ, USA},
+} 
 @book{Florac1999,
     author =	"William A. Florac and Anita D. Carleton",
     title =		"Measuring the Software Process",
@@ -190,6 +223,23 @@
     month = {October},
     year = {2011}
 }
+@inproceedings{Goel1997,
+    author = {Goel, Amrit L. and Shin, Miyoung},
+    title = {Software Engineering Data Analysis Techniques (Tutorial)},
+    booktitle = {Proceedings of the 19th International Conference on Software Engineering},
+    series = {ICSE '97},
+    year = {1997},
+    isbn = {0-89791-914-9},
+    location = {Boston, Massachusetts, USA},
+    pages = {667--668},
+    numpages = {2},
+    url = {http://doi.acm.org/10.1145/253228.253816},
+    doi = {10.1145/253228.253816},
+    acmid = {253816},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {KDD, NHPP, classification trees, data mining, neural networks, radial basis functions, regression modeling, software metrics, software reliability, statistical analysis},
+} 
 @article{Halkidi2011,
     author = {Halkidi, M. and Spinellis, D. and Tsatsaronis, G. and Vazirgiannis, M.},
     title = {Data Mining in Software Engineering},
@@ -216,6 +266,25 @@
     publisher = {Elsevier Science Inc.},
     address = {New York, NY, USA},
 } 
+@inproceedings{Hassan2010,
+    author = {Hassan, Ahmed E. and Xie, Tao},
+    title = {Software Intelligence: The Future of Mining Software Engineering Data},
+    booktitle = {Proceedings of the FSE/SDP Workshop on Future of Software Engineering Research},
+    series = {FoSER '10},
+    year = {2010},
+    isbn = {978-1-4503-0427-6},
+    location = {Santa Fe, New Mexico, USA},
+    pages = {161--166},
+    numpages = {6},
+    url = {http://doi.acm.org/10.1145/1882362.1882397},
+    doi = {10.1145/1882362.1882397},
+    acmid = {1882397},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {mining software engineering data, mining software repositories, software intelligence},
+} 
+
+
 @article{Hassan2013,
     author = {Hassan, Ahmed E. and Hindle, Abram and Runeson, Per and Shepperd, Martin and Devanbu, Prem and Kim, Sunghun},
     title = {Roundtable: What's Next in Software Analytics},
@@ -315,6 +384,13 @@
     keywords={software cost estimation;cost overruns;software development effort estimation;unrealistic project plans;Context modeling;Costs;Estimation;Productivity;Software developmnet;combination of estimates;cost estimation;estimation models;expert estimation;software productivity},
     doi={10.1109/MS.2014.49},
     ISSN={0740-7459}
+}
+@inproceedings{Kaner2004,
+    title={Software engineering metrics: What do they measure and how do we know?},
+    author={Kaner, Cem and Bond, Walter P},
+    booktitle={METRICS 2004},
+    organization={{IEEE CS Press}},
+    year={2004}
 }
 @article{Kaplan1992,
 	author = 	"Robert S. Kaplan and David P. Norton",
@@ -484,6 +560,21 @@
     address = {Berlin, Heidelberg},
     keywords = {software process mining and management},
 } 
+@incollection{Ruhe1997,
+    year={1997},
+    isbn={978-3-540-63223-8},
+    booktitle={Principles of Data Mining and Knowledge Discovery},
+    volume={1263},
+    series={Lecture Notes in Computer Science},
+    editor={Komorowski, Jan and Zytkow, Jan},
+    doi={10.1007/3-540-63223-9_116},
+    title={Knowledge discovery from software engineering data: Rough set analysis and its interaction with goal-oriented measurement},
+    url={http://dx.doi.org/10.1007/3-540-63223-9_116},
+    publisher={Springer Berlin Heidelberg},
+    author={Ruhe, Günther and Gesellschaft, Fraunhofer},
+    pages={167-177},
+    language={English}
+}
 @article{Ruparelia2010,
     author = {Ruparelia, Nayan B.},
     title = {Software Development Lifecycle Models},
@@ -617,6 +708,23 @@
     publisher = {IEEE Computer Society},
     address = {Los Alamitos, CA, USA},
 }
+@inproceedings{Zhang2011,
+    author = {Zhang, Dongmei and Dang, Yingnong and Lou, Jian-Guang and Han, Shi and Zhang, Haidong and Xie, Tao},
+    title = {Software Analytics As a Learning Case in Practice: Approaches and Experiences},
+    booktitle = {Proceedings of the International Workshop on Machine Learning Technologies in Software Engineering},
+    series = {MALETS '11},
+    year = {2011},
+    isbn = {978-1-4503-1022-2},
+    location = {Lawrence, Kansas, USA},
+    pages = {55--58},
+    numpages = {4},
+    url = {http://doi.acm.org/10.1145/2070821.2070829},
+    doi = {10.1145/2070821.2070829},
+    acmid = {2070829},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {machine learning, software analytics, technology transfer},
+} 
 @article{Zhang2013,
     author = {Zhang, Dongmei and Han, Shi and Dang, Yingnong and Lou, Jian-Guang and Zhang, Haidong and Xie, Tao},
     title = {Software Analytics in Practice},
