lots more references added

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -182,7 +182,7 @@ used \cite{Hassan2010}, but
 the term software analytics has become the common term for referring to the topic \cite{Zhang2011}.
 The goal of software analytics is to extract insights
 from software artifacts to aide practioners in making better decisions regarding software
-development \cite{Zhang2013}.  The main focus areas of software analytics are:
+development \cite{Zhang2013}.  The three main focus areas of software analytics are:
 \begin{description}
     \item[User Experience] - How can the software enable the user to more easily or quickly 
         accomplish the task at hand?
@@ -221,6 +221,23 @@ can be found in the PROMISE Data Repository \cite{promise12}.
 
 See also \cite{Buse2010} and then \cite{Buse2012} begins to discuss the 
 information that is needed to properly perform software development analytics.
+
+%%%%%% a brief outline
+the use can be traced back to late 1990s, then techniques of data mining were applied to 
+software engineering data
+
+Then it became known as software analytics
+desc software analytics
+
+then describe software dev analytics
+
+then describe how all this analysis requires data, so determining the correct data is important \cite{Buse2012}
+In order to store the data, tools are needed \cite{Czerwonka2013,Zhang2013} not east to create the right tools \cite{Spraragen2005}
+
+then discuss how gamification is an obvious next step \cite{Dubois2013, Jain2013}
+
+the discuss software quality \cite{Jones2013,Boehm2001,Faizan2012,Miguel2014}
+
 
 
 
