--- a/references.bib
+++ b/references.bib
@@ -104,6 +104,26 @@
     publisher = {Prentice Hall PTR},
     address = {Upper Saddle River, NJ, USA},
 } 
+@article{Boehm2001,
+    author = {Boehm, Barry and Basili, Victor R.},
+    title = {Software Defect Reduction Top 10 List},
+    journal = {Computer},
+    issue_date = {January 2001},
+    volume = {34},
+    number = {1},
+    month = jan,
+    year = {2001},
+    issn = {0018-9162},
+    pages = {135--137},
+    numpages = {3},
+    url = {http://dx.doi.org/10.1109/2.962984},
+    doi = {10.1109/2.962984},
+    acmid = {621640},
+    publisher = {IEEE Computer Society Press},
+    address = {Los Alamitos, CA, USA},
+} 
+
+
 @inproceedings{Buse2010,
     author = {Buse, Raymond P.L. and Zimmermann, Thomas},
     title = {Analytics for Software Development},
@@ -151,6 +171,20 @@
     year = {2010},
     address = {\url{http://goo.gl/MBESq0} }
 }
+@article{Czerwonka2013,
+    author = {Jacek Czerwonka and Nachiappan Nagappan and Wolfram Schulte and Brendan Murphy},
+    title = {CODEMINE: Building a Software Development Data Analytics Platform at Microsoft},
+    journal ={IEEE Software},
+    volume = {30},
+    number = {4},
+    issn = {0740-7459},
+    year = {2013},
+    pages = {64-71},
+    doi = {http://doi.ieeecomputersociety.org/10.1109/MS.2013.68},
+    publisher = {IEEE Computer Society},
+    address = {Los Alamitos, CA, USA},
+}
+
 @inproceedings{Dubois2013,
     title={Understanding gamification mechanisms for software development},
     author={Dubois, Daniel J and Tamburrelli, Giordano},
@@ -196,6 +230,15 @@
     publisher = {J. C. Baltzer AG, Science Publishers},
     address = {Red Bank, NJ, USA},
 } 
+@article{Faizan2012,
+    title={Contemporary trends in defect prevention: A survey report},
+    author={Faizan, Muhammad and Khan, Muhammad Naeem Ahmed and Ulhaq, Sami},
+    journal={International Journal of Modern Education and Computer Science (IJMECS)},
+    volume={4},
+    number={3},
+    pages={14},
+    year={2012}
+}
 @book{Florac1999,
     author =	"William A. Florac and Anita D. Carleton",
     title =		"Measuring the Software Process",
@@ -283,8 +326,6 @@
     address = {New York, NY, USA},
     keywords = {mining software engineering data, mining software repositories, software intelligence},
 } 
-
-
 @article{Hassan2013,
     author = {Hassan, Ahmed E. and Hindle, Abram and Runeson, Per and Shepperd, Martin and Devanbu, Prem and Kim, Sunghun},
     title = {Roundtable: What's Next in Software Analytics},
@@ -329,6 +370,16 @@
     keywords={glossaries;software engineering;standards;IEEE Std 610.12-1990;software engineering terminology;standard glossary;Software engineering;Standards;Terminology;Definitions;Software engineering;dictionary;glossary;terminology},
     doi={10.1109/IEEESTD.1990.101064}
 }
+@article{Jain2013,
+	author = 	{Anuj Jain and Sarika Angadi},
+	title =		{Gamifiying software development process},
+	year =		{2013",
+    volume = {11},
+    number = {3},
+	journal =	{Infosys Labs Briefings},
+	pages =		{21-28},
+	note = {\url{http://goo.gl/T9PB96} accessed 01-Jan-2015 }
+}
 @article{Jacobson2014,
     author = {Jacobson, Ivar and Seidewitz, Ed},
     title = {A New Software Engineering},
@@ -349,7 +400,7 @@
 } 
 @book{Jones1996,
     author = {Jones, Capers},
-    title = {Applied Software Measurement (2Nd Ed.): Assuring Productivity and Quality},
+    title = {Applied Software Measurement (2nd Ed.): Assuring Productivity and Quality},
     year = {1997},
     isbn = {0-07-032826-9},
     publisher = {McGraw-Hill, Inc.},
@@ -362,6 +413,14 @@
     title = {SCORING AND EVALUATING SOFTWARE METHODS, PRACTICES, AND RESULTS},
     howpublished = {\url{http://goo.gl/3i06pN}},
     note = {Namecook Analytics Blog, accessed 22-Mar-2014  }
+}
+@misc{Jones2013,
+    author= {Jones, Capers},
+    year = {2013},
+    month = {July},
+    title = {{WHY ``COST PER DEFEC'' IS HARMFUL FOR SOFTWARE QUALITY}},
+    howpublished = {\url{http://goo.gl/QUsvlw}},
+    note = {Namecook Analytics Blog, accessed 01-Jan-2015  }
 }
 @book{Jones2009,
     author = {Jones, Capers},
@@ -621,6 +680,23 @@
     school={North Carolina State University},
     url={http://repository.lib.ncsu.edu/ir/handle/1840.16/9199}
 }
+@inproceedings{Spraragen2005,
+    author = {Spraragen, Susan L.},
+    title = {The Challenges in Creating Tools for Improving the Software Development Lifecycle},
+    booktitle = {Proceedings of the 2005 Workshop on Human and Social Factors of Software Engineering},
+    series = {HSSE '05},
+    year = {2005},
+    isbn = {1-59593-120-1},
+    location = {St. Louis, Missouri},
+    pages = {1--3},
+    numpages = {3},
+    url = {http://doi.acm.org/10.1145/1082983.1083118},
+    doi = {10.1145/1082983.1083118},
+    acmid = {1083118},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {communication, software development, user centered design},
+} 
 @article{Taylor2010,
     author = {Taylor, Quinn and Giraud\&\#45;Carrier, Christophe},
     title = {Applications of Data Mining in Software Engineering},
